   * Fixed units moving after in game help exit. (#24644)
   * Fixed a bug that caused rapid announce messages to overlap eachother. (bug #21634)
   * Fix buttons disappearing while menus are open.
   * Fix map labels disappearing when a dialog is open.
   * Improve tooltip placement.
   * Move recruit/recall to top of context menu
 * WML Engine:
   * Add base_income key to [store_side]
   * Fix issues with alpha animations on hidden units (#14503)
   * Extensions to GUI2 Canvas ([drawing] tag in dialogs):
     * New [round_rectangle] shape - a rectangle plus corner_radius
     * [circle] shape can now be drawn filled; color key is now border_color
     * [image] has new resize_mode=tile_center
     * Canvas colors can now be expressed as formulas. The formula must return
       the color as a list of its components, eg "([r, g, b, a])"
   * Empty tags are no longer written to the configs of [unit]s and [side]s.
   * New [change_theme] tag to change the theme mid-scenario
   * New [zoom] tag allows changing the zoom level from an event
   * [kill]animate=yes now plays victory animations if applicable
   * [kill] now supports [primary_attack] and [secondary_attack] for the animation
   * Fix [volume] not accepting 100% as the new volume.
   * New concat_to_* keys in unit_type inheritance allow amending keys
   * Accept [story] as ActionWML in events
 * Miscellaneous and bug fixes:
   * Fixed base animation showing on walking corpse & soulless bats (bug #25673)

Version 1.13.7:
 * AI:
   * Fix a performance regression in complex combat situations such as the
     "Oath of Allegiance" UMC campaign.
   * Fix some Micro AIs and AI helper functions not working correctly for AI
     sides under shroud
   * New function ai_helper.find_path_with_shroud()
 * Campaigns:
   * Eastern Invasion:
     * In 'Weldyn Besieged', redesigned the way in which revealing the
       identities of the liches works.
  * Descent Into Darkness: