@@ -62,6 +62,7 @@
         map_data = "{test/maps/generic_unit_test.map}"
         turns = -1
         id = {NAME}
+        is_unit_test = yes
 
         {DAWN}
 
