@@ -46,6 +46,7 @@ end
         map_data = "{test/maps/generic_unit_test.map}"
         turns = -1
         id = {NAME}
+        is_unit_test = yes
 
         {DEFAULT_SCHEDULE}
 
