@@ -140,6 +140,7 @@
     [test]
         name="Unit Test {ID}"
         id={ID}
+        is_unit_test = yes
         {test/maps/pathfind_1.cfg}
 
         [event]
@@ -354,6 +355,7 @@
     [test]
         name="Unit Test {ID}"
         id={ID}
+        is_unit_test = yes
         {test/maps/pathfind_1.cfg}
 
         [event]
@@ -388,6 +390,7 @@
     [test]
         name="Unit Test {ID}"
         id={ID}
+        is_unit_test = yes
         {test/maps/pathfind_1.cfg}
 
         [event]
