@@ -7,6 +7,7 @@
         turns = 3
         id = {ID}
         random_start_time = no
+        is_unit_test = yes
 
         {DAWN}
 
