@@ -14,6 +14,7 @@
         turns = 4
         id = {ID}
         random_start_time = no
+        is_unit_test = yes
 
         {DAWN}
 
