@@ -8,6 +8,7 @@
         id = {ID}
         random_start_time = no
         victory_when_enemies_defeated = {VWED}
+        is_unit_test = yes
 
         {DAWN}
 
