@@ -40,6 +40,7 @@
     turns = 7
     id = test_grunt_tod_damage
     random_start_time = no
+    is_unit_test = yes
 
     {DEFAULT_SCHEDULE}
 
@@ -101,6 +102,7 @@
     turns = 7
     id = test_time_area_damage
     random_start_time = no
+    is_unit_test = yes
 
     {DEFAULT_SCHEDULE}
 
@@ -172,6 +174,7 @@
     turns = 7
     id = test_time_area_prestart
     random_start_time = no
+    is_unit_test = yes
 
     {DEFAULT_SCHEDULE}
 
