@@ -24,6 +24,7 @@
 #enddef
 
 {GENERIC_UNIT_TEST "test_relative_dir" (
+    is_unit_test=no
     [event]
         name=start
         [modify_unit]
