@@ -100,6 +100,7 @@ enum HOTKEY_COMMAND {
 	TITLE_SCREEN__CORES,
 	TITLE_SCREEN__EDITOR,
 	TITLE_SCREEN__CREDITS,
+	TITLE_SCREEN__TEST,
 	GLOBAL__HELPTIP,
 	LUA_CONSOLE,
 
