@@ -66,6 +66,7 @@ Version 1.13.7+dev:
    * Fix map labels disappearing when a dialog is open.
    * Improve tooltip placement.
    * Move recruit/recall to top of context menu
+   * Add a hotkey to launch test scenarios from the titlescreen
  * WML Engine:
    * Add base_income key to [store_side]
    * Fix issues with alpha animations on hidden units (#14503)
